--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lint:fix": "npm run lint -- --fix",
     "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "npm test -- --watch",
+    "test:staged": "npm test -- --findRelatedTests",
     "test:coverage": "npm test -- --coverage"
-
   },
   "keywords": [],
   "author": "",
@@ -28,6 +28,7 @@
     "eslint-plugin-promise": "^5.2.0",
     "git-commit-msg-linter": "^4.1.1",
     "jest": "^27.5.1",
+    "lint-staged": "^12.3.7",
     "ts-jest": "^27.1.4",
     "typescript": "^4.6.3"
   },
